deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-morty-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-morty-api
  template:
    metadata:
      labels:
        app: rick-morty-api
    spec:
      containers:
      - name: rick-morty-api
        image: rick-morty-script:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: output-volume
          mountPath: /app/output
      volumes:
      - name: output-volume
        emptyDir: {}
