service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-api-service
spec:
  selector:
    app: rick-morty-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
